# P4

./: estimate_noise.py  receiver_UDP.py  receiver_tcp.py  transmitter_UDP.py
Algorith_Test/: Guassian_blur_test.py
CPP_network/: CMakeLists.txt  client.cpp  server.cpp
Data/: Cloud_noise_data.xlsx  Cloud_server_latency_data.xlsx  Local_server_latency_data.xlsx  encode_decode.xlsx
Network Code/Cloud/Client/: calculate_mean_noise.py  client.cpp
Network Code/Cloud/Cloud/: CMakeLists.txt  server.cpp
Network Code/Local Cloud/Client/: client.cpp
Network Code/Local Cloud/Server/: CMakeLists.txt  server.cpp
Network Code/Local Cloud/Test/Latency test/: frame latency extract.py
Network Code/Local Cloud/Test/Noise test/: client.cpp
Network Code/Local/Client/: CMakeLists.txt  client.cpp
OpenCV_cpp/: Guide til cam cpp.md  fast_cv_denoise.json  fast_cv_denoise_stage.cpp
Other Tests/Enhancment test/: denoise_testing.ipynb
Other Tests/Enhancment test/Denoise_test/: add_noise.py  estimate_noise.py  estimate_noise_relation.py  gaussian_blur_test.py  median_blur_test.py  simple_plot_heatmaps.py
Other Tests/Enhancment test/bilateral_test_files/: billateral_avg_score_100.npy  billateral_avg_score_15.npy  billateral_avg_score_20.npy  billateral_avg_score_200.npy  billateral_avg_score_300.npy  billateral_avg_score_50.npy  billateral_estimate_noise_20.npy  billateral_estimate_noise_5.npy
Other Tests/Enhancment test/fastnlmeans_test_files/: fastnlmeans_avg_score_10.npy  fastnlmeans_avg_score_20.npy  fastnlmeans_avg_score_5.npy  fastnlmeans_estimate_noise_10.npy  fastnlmeans_estimate_noise_5.npy
Other Tests/Enhancment test/gaussian_test_files/: gaussian_blur_avg_score_10.npy  gaussian_blur_avg_score_15.npy  gaussian_blur_avg_score_20.npy  gaussian_blur_avg_score_5.npy  gaussian_blur_estimate_noise_10.npy  gaussian_blur_estimate_noise_15.npy
Other Tests/Enhancment test/guassian_test_files/: denoise_avg_score_15.npy  denoise_avg_score_20.npy  high_pass_avg_score_10.npy  high_pass_avg_score_15.npy  high_pass_avg_score_20.npy  high_pass_avg_score_5.npy  unsharp_avg_score_10.npy  unsharp_avg_score_15.npy  unsharp_avg_score_20.npy  unsharp_avg_score_5.npy
Other Tests/Enhancment test/median_test_files/: median_blur_avg_score_100.npy  median_blur_avg_score_20.npy  median_blur_avg_score_200.npy  median_blur_avg_score_300.npy  median_blur_estimate_noise_10.npy  median_blur_estimate_noise_15.npy  median_blur_estimate_noise_20.npy  median_blur_estimate_noise_5.npy
Other Tests/Resolution test/: Resolution_extracter.py
Other Tests/Time test Raspberry Pi/: CMakeCache.txt  Makefile  main.cpp
Python Code/Estimate Noise/: noise_estimate_test.py
Python Code/Local/TCP/: TCP_Transmitter_Local.py
Python Code/Local/UDP/: H264_Local.py  UDP_Receiver.py  UDP_Transmitter_Local.py
Python_Kode/: client.py  server.py
Rpicam Code/: Bilateral_Filter_Est_Noise_Local.cpp  fast_cv_denoise.json
Rpicam Code/Test/: Est_Noise_Local.cpp  Est_Noise_Remote.cpp  Latency_Local.cpp  Latency_Remote.cpp
Test Data/: Local_latency_data.xlsx  Local_noise_data.xlsx  fps_test.xlsx
tests/: baseline_score.npy  bilateral.ipynb  fastnlmeans.ipynb
tests/Denoise_test/: baseline.py  bilateralfilter_test.py  fastnlmeans_test.py  simple_plot.py  ssim_gpu.py
tests/bilateral_test_files/: billateral_avg_score_10.npy  billateral_avg_score_5.npy  billateral_estimate_noise_10.npy  billateral_estimate_noise_15.npy
tests/fastnlmeans_test_files/: fastnlmeans_avg_score_10.npy  fastnlmeans_avg_score_15.npy  fastnlmeans_avg_score_20.npy  fastnlmeans_avg_score_5.npy  fastnlmeans_estimate_noise_15.npy  fastnlmeans_estimate_noise_20.npy
tests/gaussian_test_files/: gaussian_blur_estimate_noise_20.npy  gaussian_blur_estimate_noise_5.npy
tests/guassian_test_files/: denoise_avg_score_10.npy  denoise_avg_score_5.npy  denoise_estimate_noise_5.npy  high_pass_estimate_noise_10.npy  high_pass_estimate_noise_20.npy  unsharp_estimate_noise_15.npy
tests/guassian_test_files/New Folder With Items/: denoise_avg_score_100.npy  denoise_avg_score_200.npy  denoise_avg_score_400.npy  denoise_avg_score_50.npy  high_pass_avg_score_300.npy  high_pass_avg_score_400.npy  high_pass_avg_score_50.npy  laplacian_avg_score_100.npy  laplacian_avg_score_200.npy  laplacian_avg_score_50.npy  unsharp_avg_score_200.npy  unsharp_avg_score_300.npy  unsharp_avg_score_400.npy  unsharp_avg_score_50.npy
tests/median_test_files/: median_blur_avg_score_10.npy  median_blur_avg_score_15.npy  median_blur_avg_score_400.npy  median_blur_avg_score_5.npy  median_blur_avg_score_50.npy
tests/time_test/: CMakeLists.txt  cmake_install.cmake  main.cpp
(+10 files in other folders)
